--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.13",
     "nodemon": "^2.0.4"
   }
 }
